--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #1a1a2e, #16213e);
+            background: linear-gradient(to bottom right, #00d2ff, #ff6ec4, #2c3e50);
             overflow: hidden;
             font-family: 'Arial', sans-serif;
         }
