--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to bottom right, #00d2ff, #ff6ec4, #2c3e50);
+            background: linear-gradient(to right, #ffffff, #eeeeee, #cccccc, #999999);
             overflow: hidden;
             font-family: 'Arial', sans-serif;
         }
