--- a/dashboard.html
+++ b/dashboard.html
@@ -114,17 +114,17 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">Your Title Here</h1>
+        <h1 class="title">Hi, I'm Ahmad Fahril | Junior Web Developer</h1>
     </div>
     <div class="container">
         <div class="content-section">
             <div class="description">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor.</p>
-                <p>Suspendisse potenti. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+                <p>I'm Ahmad Fahril — a passionate junior web developer and a vocational high school student majoring in Electronics Engineering. I specialize in building responsive and interactive websites, particularly those integrated with IoT technologies. I have hands-on experience with ESP8266/ESP32, Firebase Realtime Database, Firestore, MySQL, and MQTT protocols. I've developed real-time control systems using WebSocket and cloud databases to power smart applications.</p>
+                <p>I enjoy solving technical challenges, exploring new technologies, and transforming complex problems into practical, user-friendly web-based solutions. I'm always eager to collaborate on meaningful and innovative projects that make a real impact.</p>
             </div>
             <div class="buttons">
-                <button class="btn btn-primary">Primary Action</button>
-                <button class="btn btn-secondary">Secondary Action</button>
+                <button class="btn btn-primary">see my project</button>
+                <button class="btn btn-secondary">Contact me</button>
             </div>
         </div>
         <div class="image-section">
