--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to right, #ffffff, #eeeeee, #cccccc, #999999);
+            background: linear-gradient(135deg, #00d2ff, #001f4d, #40E0D0);
             overflow: hidden;
             font-family: 'Arial', sans-serif;
         }
