--- a/dashboard.html
+++ b/dashboard.html
@@ -138,7 +138,9 @@
         </div>
         <div class="image-section">
             <div class="image-placeholder">
-                <span>Your Image Goes Here</span>
+                <span>
+                    <img src="https://raw.githubusercontent.com/AhmadFahril16/fahrilporto/branch/images/coder1.png" alt="Coding is my ninja way." />
+               </span>
             </div>
         </div>
     </div>
