--- a/dashboard.html
+++ b/dashboard.html
@@ -14,12 +14,12 @@
             color: white;
             display: flex;
             flex-direction: column;
-            overflow: hidden; /* Prevent scroll during animation */
         }
 
         .header {
             text-align: center;
             padding: 2rem 0;
+            margin-top: 50px; /* Add margin to push the header down */
         }
 
         .title {
@@ -28,7 +28,7 @@
             font-weight: 700;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             opacity: 0; /* Start hidden */
-            transform: translateY(-20px); /* Start above */
+            transform: translateY(-30px); /* Start higher */
             transition: opacity 0.5s ease, transform 0.5s ease; /* Transition for animation */
         }
 
@@ -161,6 +161,7 @@
                 setTimeout(() => {
                     title.textContent += char;
                     title.style.opacity = 1; // Fade in title
+                    title.style.transform = 'translateY(0)'; // Move to original position
                 }, index * 100); // Delay for each character
             });
         }
