--- a/dashboard.html
+++ b/dashboard.html
@@ -141,6 +141,7 @@
             <div class="buttons" id="buttons">
                 <a href="see.html" class="btn btn-primary">See my project</a>
                 <a href="contact.html" class="btn btn-secondary">Contact us</a>
+                <a href="aboutme.html" class="btn btn-secondary">About Me</a> <!-- Added About Me button -->
             </div>
         </div>
         <div class="image-section" id="imageSection">
