--- a/aboutme.html
+++ b/aboutme.html
@@ -127,10 +127,10 @@
             "Created an IoT webserver for sensors & control via Firebase."
         ];
         const skills = [
-            "<strong>Frontend:</strong> HTML, CSS, JavaScript",
-            "<strong>Realtime:</strong> Firebase, WebSocket",
-            "<strong>IoT:</strong> ESP8266, ESP32, Sensors, L298N",
-            "<strong>Tools:</strong> GitHub, Proteus, Eagle, PCB Droid"
+            "<strong>Frontend:</strong> C++, HTML, CSS, JavaScript",
+            "<strong>Realtime:</strong> Firebase, MQTT, MYSQL, WebSocket",
+            "<strong>IoT:</strong> ARDUINO, ESP8266, ESP32, STM32, Rasbery PI, Sensors, L298N",
+            "<strong>Tools:</strong> ARDUINO IDE, VS code, GitHub, Proteus, Eagle, PCB Droid"
         ];
         const visionText = `My goal is to apply my skills in freelance, internships, and tech innovation. Consistent practice & curiosity are key to growth.`;
 
