--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
     <script>
         document.getElementById("contact-form").addEventListener("submit", function(e) {
             e.preventDefault();
-            emailjs.sendForm("service_2pw0jhs", "template_zi8d6a4", this)
+            emailjs.sendForm("service_623lukq", "template_zi8d6a4", this)
                 .then(() => alert("Pesan berhasil dikirim!"))
                 .catch(error => alert("Gagal mengirim: " + error));
         });
