--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
     document.getElementById("contact-form").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      emailjs.sendForm("service_2pw0jhs", "template_zi8d6a4", this)
+      emailjs.sendForm("service_623lukq", "template_zi8d6a4", this)
         .then(() => {
           alert("Pesan berhasil dikirim!");
           this.reset(); // Reset form setelah sukses
