--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 }
 
                 emailjs
-                    .sendForm("service_2pw0jhs", "template_zi8d6a4", form)
+                    .sendForm("service_623lukq", "template_zi8d6a4", form)
                     .then(() => {
                         alert("Pesan berhasil dikirim!");
                         form.reset();
