--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       form.addEventListener("submit", function (e) {
         e.preventDefault();
 
-        emailjs.sendForm("service_623lukq", "kerjasama_template", this)
+        emailjs.sendForm("service_623lukq", "template_zi8d6a4", this)
           .then(() => {
             alert("Pesan berhasil dikirim!");
             form.reset();
