--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             max-width: 500px;
             width: 100%;
+            margin-top: 20px; /* Menambahkan margin atas untuk memberi ruang pada judul */
         }
         h2 {
             text-align: center;
