--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,12 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             max-width: 500px;
             width: 100%;
-            margin-top: 20px; /* Menambahkan margin atas untuk memberi ruang pada judul */
+            margin-top: 60px; /* Menambahkan margin atas untuk memberi ruang pada judul */
         }
         h2 {
             text-align: center;
             margin-bottom: 1rem;
+             font-size: 3.5rem; /* Meningkatkan ukuran font judul */
         }
         label {
             display: block;
