--- a/see.html
+++ b/see.html
@@ -261,7 +261,7 @@
             <div class="laptop-mockup">
                 <div class="laptop-screen">
                     <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/ecommerce.mp4" type="video/mp4">
+                        <iframe width="600" height="340" src="https://youtu.be/fglky_RnwYU" frameborder="0" allowfullscreen></iframe>
                     </video>
                 </div>
                 <div class="laptop-keyboard">
