--- a/see.html
+++ b/see.html
@@ -245,41 +245,44 @@
     </header>
 
     <div class="container mx-auto px-4">
-        <!-- Project 1 - E-Commerce Platform -->
-        <div class="project-container" data-project="ecommerce">
-            <div class="project-header">
-                <h2 class="project-title">E-Commerce Platform</h2>
-                <a href="https://ecommerce-demo.example.com" class="demo-button" target="_blank">
-                    Demo Website →
-                </a>
+    <!-- Project 1 - E-Commerce Platform -->
+    <div class="project-container" data-project="ecommerce">
+        <div class="project-header">
+            <h2 class="project-title">E-Commerce Platform</h2>
+            <a href="https://ecommerce-demo.example.com" class="demo-button" target="_blank">
+                Demo Website →
+            </a>
+        </div>
+        <p class="project-description">
+            A complete online shopping solution with product management, shopping cart, 
+            and secure payment processing.
+        </p>
+
+        <div class="laptop-mockup">
+            <div class="laptop-screen">
+                <!-- Ganti video dengan iframe langsung -->
+                <iframe width="600" height="340" src="https://www.youtube.com/embed/fglky_RnwYU" 
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
-            <p class="project-description">
-                A complete online shopping solution with product management, shopping cart, 
-                and secure payment processing.
-            </p>
-            
-            <div class="laptop-mockup">
-                <div class="laptop-screen">
-                    <video autoplay muted loop>
-                        <iframe width="600" height="340" src="https://youtu.be/fglky_RnwYU" frameborder="0" allowfullscreen></iframe>
-                    </video>
+            <div class="laptop-keyboard">
+                <div class="keyboard-row">
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div> <!-- perbaiki: ada typo classkey -->
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div>
+                    <div class="key"></div>
                 </div>
-                <div class="laptop-keyboard">
-                    <div class="keyboard-row">
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div classkey"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                        <div class="key"></div>
-                    </div>
-                    <div class="space-bar"></div>
-                </div>
+                <div class="space-bar"></div>
             </div>
+        </div>
+    </div>
+</div>
+
             
             <div class="mobile-mockup">
                 <div class="mobile-screen">
