--- a/see.html
+++ b/see.html
@@ -244,44 +244,47 @@
         </div>
     </header>
 
-    <div class="container mx-auto px-4">
-    <!-- Project 1 - E-Commerce Platform -->
-    <div class="project-container" data-project="ecommerce">
-        <div class="project-header">
-            <h2 class="project-title">E-Commerce Platform</h2>
-            <a href="https://ecommerce-demo.example.com" class="demo-button" target="_blank">
-                Demo Website →
-            </a>
-        </div>
-        <p class="project-description">
-            A complete online shopping solution with product management, shopping cart, 
-            and secure payment processing.
-        </p>
-
-        <div class="laptop-mockup">
-            <div class="laptop-screen">
-                <!-- Ganti video dengan iframe langsung -->
-                <iframe width="600" height="340" src="https://www.youtube.com/embed/fglky_RnwYU" 
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-            <div class="laptop-keyboard">
-                <div class="keyboard-row">
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div> <!-- perbaiki: ada typo classkey -->
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div>
-                    <div class="key"></div>
-                </div>
-                <div class="space-bar"></div>
-            </div>
-        </div>
+  <div class="container mx-auto px-4">
+  <!-- Project 1 - E-Commerce Platform -->
+  <div class="project-container" data-project="ecommerce">
+    <div class="project-header">
+      <h2 class="project-title">E-Commerce Platform</h2>
+      <a href="https://ecommerce-demo.example.com" class="demo-button" target="_blank">
+        Demo Website →
+      </a>
     </div>
+    <p class="project-description">
+      A complete online shopping solution with product management, shopping cart, 
+      and secure payment processing.
+    </p>
+
+    <div class="laptop-mockup">
+      <div class="laptop-screen">
+        <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
+        <video width="600" height="340" controls autoplay muted loop>
+          <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20071608.mp4" type="video/mp4">
+          Browser Anda tidak mendukung video tag.
+        </video>
+      </div>
+      <div class="laptop-keyboard">
+        <div class="keyboard-row">
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+          <div class="key"></div>
+        </div>
+        <div class="space-bar"></div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
             
             <div class="mobile-mockup">
