--- a/see.html
+++ b/see.html
@@ -314,9 +314,11 @@
             
             <div class="laptop-mockup">
                 <div class="laptop-screen">
-                    <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/social.mp4" type="video/mp4">
-                    </video>
+                    <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
+                       <video width="600" height="340" controls autoplay muted loop>
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-21%20232354.mp4">
+                       Browser Anda tidak mendukung video tag.
+                   </video>
                 </div>
                 <div class="laptop-keyboard">
                     <div class="keyboard-row">
