--- a/see.html
+++ b/see.html
@@ -42,11 +42,20 @@
 }
 
 .laptop-screen {
+    position: relative;
     width: 100%;
-    height: 100%;
+    padding-top: 56.25%; /* Rasio 16:9 */
     background: #000;
     border-radius: 5px;
     overflow: hidden;
+}
+.laptop-screen video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* atau gunakan 'contain' jika ingin seluruh video terlihat */
 }
         
         .laptop-keyboard {
