--- a/see.html
+++ b/see.html
@@ -40,11 +40,11 @@
     margin: 0 auto 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
-
+        
 .laptop-screen {
     position: relative;
     width: 100%;
-    padding-top: 56.25%; /* Rasio 16:9 */
+    padding-top: 56.25%; /* 16:9 aspect ratio */
     background: #000;
     border-radius: 5px;
     overflow: hidden;
@@ -55,8 +55,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* atau gunakan 'contain' jika ingin seluruh video terlihat */
+    object-fit: cover;
 }
+
         
         .laptop-keyboard {
             width: 100%;
