--- a/see.html
+++ b/see.html
@@ -42,21 +42,20 @@
 }
         
 .laptop-screen {
-    position: relative;
+    aspect-ratio: 16 / 9;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 aspect ratio */
     background: #000;
     border-radius: 5px;
     overflow: hidden;
+    position: relative;
 }
+
 .laptop-screen video {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 
         
         .laptop-keyboard {
