--- a/see.html
+++ b/see.html
@@ -42,8 +42,8 @@
 }
         
 .laptop-screen {
-    aspect-ratio: 16 / 9;
     width: 100%;
+    aspect-ratio: 16 / 9;
     background: #000;
     border-radius: 5px;
     overflow: hidden;
@@ -55,6 +55,7 @@
     height: 100%;
     object-fit: cover;
 }
+
 
 
         
@@ -273,7 +274,7 @@ video {
     <div class="laptop-mockup">
       <div class="laptop-screen">
         <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
-        <video width="600" height="340" controls autoplay muted loop>
+        <video autoplay muted loop controls>
           <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20071608.mp4" type="video/mp4">
           Browser Anda tidak mendukung video tag.
         </video>
@@ -327,7 +328,7 @@ video {
             <div class="laptop-mockup">
                 <div class="laptop-screen">
                     <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
-                       <video width="600" height="340" controls autoplay muted loop>
+                      <video autoplay muted loop controls>
                               <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-21%20232354.mp4">
                        Browser Anda tidak mendukung video tag.
                    </video>
@@ -377,7 +378,7 @@ video {
             <div class="laptop-mockup">
                 <div class="laptop-screen">
                     <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
-                       <video width="600" height="340" controls autoplay muted loop>
+                       <video autoplay muted loop controls>
                               <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20071839.mp4">
                        Browser Anda tidak mendukung video tag.
                    </video>
