--- a/see.html
+++ b/see.html
@@ -31,8 +31,7 @@
         /* Device Mockups */
 .laptop-mockup {
     width: 90%; /* Ubah menjadi 90% untuk responsivitas */
-    max-width: 600px; /* Tetapkan lebar maksimum */
-    height: auto; /* Biarkan tinggi otomatis */
+    max-width: 600px; /* Tetapkan lebar maksimum */ /* Biarkan tinggi otomatis */
     background: #e6e6e6;
     border-radius: 10px 10px 0 0;
     padding: 10px;
@@ -52,7 +51,6 @@
 
 .laptop-screen video {
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
