--- a/see.html
+++ b/see.html
@@ -425,9 +425,11 @@ video {
             
             <div class="laptop-mockup">
                 <div class="laptop-screen">
-                    <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/learning.mp4" type="video/mp4">
-                    </video>
+                    <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
+                       <video autoplay muted loop controls>
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20135600.mp4">
+                       Browser Anda tidak mendukung video tag.
+                   </video>
                 </div>
                 <div class="laptop-keyboard">
                     <div class="keyboard-row">
