--- a/see.html
+++ b/see.html
@@ -307,7 +307,7 @@ video {
                 <div class="mobile-home"></div>
             </div>
             
-            <a href="#" class="back-to-dashboard">← Back to Dashboard</a>
+           <a href="dashboard.html" class="← Back to Dashboard" target="_blank">
         </div>
 
         <!-- Project 2 - Social Media Dashboard -->
