--- a/see.html
+++ b/see.html
@@ -256,52 +256,48 @@ video {
     </header>
 
   <div class="container mx-auto px-4">
-  <!-- Project 1 - E-Commerce Platform -->
-  <div class="project-container" data-project="ecommerce">
-    <div class="project-header">
-      <h2 class="project-title">E-Commerce Platform</h2>
-      <a href="https://ecommerce-demo.example.com" class="demo-button" target="_blank">
-        Demo Website →
-      </a>
-    </div>
-    <p class="project-description">
-      A complete online shopping solution with product management, shopping cart, 
-      and secure payment processing.
-    </p>
-
-    <div class="laptop-mockup">
-      <div class="laptop-screen">
-        <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
-        <video autoplay muted loop controls>
-          <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20071608.mp4" type="video/mp4">
-          Browser Anda tidak mendukung video tag.
-        </video>
-      </div>
-      <div class="laptop-keyboard">
-        <div class="keyboard-row">
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-          <div class="key"></div>
-        </div>
-        <div class="space-bar"></div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+        <!-- Project 2 - Social Media Dashboard -->
+        <div class="project-container" data-project="social dashboard">
+            <div class="project-header">
+                <h2 class="project-title">Social Media Dashboard</h2>
+                <a href="https://social-demo.example.com" class="demo-button" target="_blank">
+                    Demo Website →
+                </a>
+            </div>
+            <p class="project-description">
+                Analytics platform for tracking engagement and scheduling posts with
+                real-time data visualization.
+            </p>
+            
+            <div class="laptop-mockup">
+                <div class="laptop-screen">
+                    <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
+                      <video autoplay muted loop controls>
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-21%20232354.mp4">
+                       Browser Anda tidak mendukung video tag.
+                   </video>
+                </div>
+                <div class="laptop-keyboard">
+                    <div class="keyboard-row">
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                        <div class="key"></div>
+                    </div>
+                    <div class="space-bar"></div>
+                </div>
+            </div>
             
             <div class="mobile-mockup">
                 <div class="mobile-screen">
                     <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/ecommerce-mobile.mp4" type="video/mp4">
+                        <source src="https://github.com/username/repo/raw/main/videos/social-mobile.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="mobile-home"></div>
