--- a/see.html
+++ b/see.html
@@ -396,9 +396,10 @@ video {
             
             <div class="mobile-mockup">
                 <div class="mobile-screen">
-                    <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/fitness-mobile.mp4" type="video/mp4">
-                    </video>
+                       <video autoplay muted loop controls>
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20071839.mp4">
+                       Browser Anda tidak mendukung video tag.
+                   </video>
                 </div>
                 <div class="mobile-home"></div>
             </div>
