--- a/see.html
+++ b/see.html
@@ -346,9 +346,11 @@ video {
             
             <div class="mobile-mockup">
                 <div class="mobile-screen">
-                    <video autoplay muted loop>
-                        <source src="https://github.com/username/repo/raw/main/videos/social-mobile.mp4" type="video/mp4">
-                    </video>
+                    <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
+                      <video autoplay muted loop controls>
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20144912%20-%20Trim.mp4">
+                       Browser Anda tidak mendukung video tag.
+                   </video>
                 </div>
                 <div class="mobile-home"></div>
             </div>
