--- a/see.html
+++ b/see.html
@@ -352,7 +352,7 @@ video {
                 <div class="mobile-screen">
                     <!-- Ganti iframe YouTube dengan video asli dari GitHub -->
                       <video autoplay muted loop controls>
-                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20144912%20-%20Trim.mp4">
+                              <source src="https://github.com/AhmadFahril16/fahrilporto/raw/refs/heads/main/assets/Screen%20Recording%202025-06-22%20155924.mp4">
                        Browser Anda tidak mendukung video tag.
                    </video>
                 </div>
